# new-ara-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  Pipfile  README.md  buildspec.yml  docker-compose.example.yml  docker-compose.local.yml  docker-compose.test.yml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  requirements.txt  schema.yml  tmp.sql
.docker/: codebuild.sh  run-celery.sh  run.sh  supervisor-app.conf  supervisor-celery-worker.conf
.github/workflows/: generate-docker-tag.sh  github-actions.yml  main.yml
apps/calendar/: admin.py  apps.py  models.py  urls  urls.py
apps/calendar/migrations/: 0001_initial.py  0002_alter_calendar_id_alter_tag_id.py
apps/calendar/models/: __init__.py  calendar.py  event.py  tag.py
apps/calendar/serializers/: calendar.py  event.py  tag.py
apps/calendar/views/: __init__.py  event.py  tag.py
apps/chatting/: urls.py
apps/chatting/consumers/: chat.py
apps/chatting/migrations/: 0001_initial.py  0002_chatmessage_message_content_chatmessage_message_type_and_more.py  0003_alter_chatroompermission_kick_permission.py  0004_alter_chatroommembership_subscribed.py  0005_remove_chatroom_room_id.py  0006_alter_chatroommembership_options_and_more.py  0007_alter_chatmessage_options_and_more.py  0008_chatroom_picture.py  0009_alter_chatroommembership_last_seen_message.py
apps/chatting/models/: __init__.py  expired_message.py  mebership_room.py  membership_room.py  message.py  room.py  room_invitation.py  room_permission.py
apps/chatting/permissions/: dm.py  invitation.py  message.py  room.py
apps/chatting/serializers/: dm.py  invitation.py  message.py  room.py
apps/chatting/views/: router.py
apps/core/: admin.py  consumers.py  documents.py  routing.py  urls.py
apps/core/filters/: article.py  board.py  comment.py  notification.py
apps/core/management/: tasks.py
apps/core/migrations/: 0001_initial.py  0002_auto_20190926_2222.py  0003_create_FAQ.py  0004_article_url.py  0005_metadatamodel_db_index.py  0006_bestarticle_article_foreignkey.py  (+81 more)
apps/global_notice/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/kaist/: admin.py  apps.py
apps/user/: admin.py  urls.py
ara/: __init__.py  asgi.py  authentication.py  celery.py  fcm.py  firebase.py  log.py  redis.py  sanitizer.py  urls.py  websocket.py  wsgi.py
ara/ara/: celery.py  urls.py
ara/classes/: admin.py  decorator.py  middleware.py  pagination.py  sparcssso.py  viewset.py
ara/controller/: api.py  authentication.py  constants.py  pagination.py  request.py  response.py  urls.py
ara/db/: models.py
ara/domain/: ara_entity.py  exceptions.py  notification.py
ara/infra/: django_infra.py  notification.py
ara/log/: __init__.py  handler.py  log_object.py  middleware.py
ara/service/: notification.py
ara/settings/: __init__.py  api.py  aws.py  cacheops.py  config.cnf.example  django.py  djangorestframework.py  elasticsearch.py  env.py  firebase.py  log.py  redis.py  s3.py  scheduler.py  sentry.py  settings.py  spectacular.py  sso.py  test.py  websocket.py
deployment/base/: kustomization.yaml
logs/: http_access.log.2024-04-29.21-46-53  http_access.log.2024-05-02.23-13-42  http_access.log.2024-05-13.00-21-17  http_access.log.2024-05-14.12-48-11  http_access.log.2024-07-24.00-20-31  http_access.log.2024-07-25.09-26-20  http_access.log.2024-08-11.02-41-16
tests/: conftest.py  pytest.ini  test_article_search.py  test_articles.py  test_block.py  test_board.py  test_calendar.py  test_comments.py  test_communication_article.py  test_fcm.py  test_global_notice.py  test_home.py  test_i18n.py  test_notification.py  test_notification_infra.py  test_recent.py  test_report.py  test_scrap.py  test_user.py
tests/logs/: http_access.log.2024-08-11.01-10-12
(+355 files in other folders)
