[tool.poetry]
name = "new-ara-api"
version = "2.0.6"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.14"
django-s3-storage = "^0.14.0"
django-cors-headers = "^3.1"
django-mysql = "^3.2"
requests = "^2.22"
beautifulsoup4 = "^4.8"
django-extensions = "^3.2.1"
djangorestframework-filters = "^1.0.0.dev0"
drf-yasg = "^1.17"
bleach = "^3.1"
pillow = "^9.4.0"
django-environ = "^0.4.5"
gunicorn = "^19.9"
pytest = "^5.4.2"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
lxml = "^4.6.5"
django-crontab = "^0.7.1"
redis = "^3.5.3"
celery = "^5.2.7"
django-celery-beat = "^2.0.0"
django-celery-results = "^2.5.1"
mysqlclient = "^2.0.1"
django-redis = "^4.12.1"
bpython = "^0.19"
django-ses = "^1.0.2"
tqdm = "^4.48.2"
cached-property = "^1.5.1"
django-cacheops = "^7.0.1"
fake-useragent = "^0.1.11"
sentry-sdk = "0.19.4"
django-elasticsearch-dsl = "^7.1.4"
html5lib = "^1.1"
pyotp = "^2.6.0"
Django = "^4.2"
importlib-metadata = "4.8.1"
firebase-admin = "^6.0.1"
django-dotenv = "^1.4.2"
elasticsearch-dsl = "^7.0.0"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
pylint-django = "2.3.0"
django-silk = "4.1.0"
django-debug-toolbar = "^4.1.0"
django-debug-toolbar-force = "0.1.8"
pre-commit = "^2.8.2"
black = "^22.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
